# freedcamp-mcp-server

./: .gitignore  DOCKER.md  Dockerfile  LICENSE  Makefile  docker-compose.yml  docker-setup-summary.md  env-example.sh  freedcamp-documentation.md  freedcamp-workflow-instructions.md  freedcamp_api.docx  freedcamp_mcp.py  h origin main  healthcheck.py  pyproject.toml  readme.md  requirements.txt  run-freedcamp-mcp.bat  run-freedcamp-mcp.sh
